# Battery-Database

./: .cruft.json  404.html  MANIFEST.in  README.md  README.md.rej  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml  pyproject.toml.rej
Battery-Database/: MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
Battery-Database/docs/: index.md
Battery-Database/src/battery_database/normalizers/: __init__.py  normalizer.py
Battery-Database/src/battery_database/parsers/: __init__.py  parser.py
Battery-Database/src/battery_database/schema_packages/: __init__.py  schema_package.py
Battery-Database/tests/: conftest.py
Battery-Database/tests/apps/: test_app.py
Battery-Database/tests/normalizers/: test_normalizer.py
Battery-Database/tests/parsers/: test_parser.py
docs/: index.md
docs/explanation/: explanation.md
docs/how_to/: contribute_to_the_documentation.md  contribute_to_this_plugin.md  how_to_add_own_batterydata.md  install_this_plugin.md  search_data_in_app.md  use_this_plugin.md
docs/reference/: references.md
docs/tutorial/: tutorial.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  how_to_add_own_batterydata.html  install_this_plugin.html  search_data_in_app.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/battery_database/normalizers/: normalizer.py
src/battery_database/parsers/: __init__.py  parser.py
src/battery_database/schema_packages/: __init__.py  sample_schema_package.py
src/nomad_battery_database/apps/: __init__.py  battery_app.py
src/nomad_battery_database/normalizers/: __init__.py  normalizer.py
src/nomad_battery_database/parsers/: __init__.py  __init__.py.rej  battery_db.py  battery_parser.py  parser.py  utils.py
src/nomad_battery_database/schema_packages/: __init__.py  battery.py  battery_schema.py  sample_schema_package.py  schema_package.py
tests/: conftest.py
tests/apps/: test_app.py
tests/data/: battery_data_pivot.extracted_battery.csv  data_content.md  pivot_battery_data.py  split_csv_to_yaml.py  test.archive.yaml  test_battery_data_pivot.extracted_battery.csv
tests/data/yaml_rows/: battery_00001.yaml  battery_00002.yaml  battery_00003.yaml  battery_00005.yaml  battery_00012.yaml  battery_00014.yaml  battery_00021.yaml  battery_00022.yaml  battery_00032.yaml  battery_00033.yaml  battery_00036.yaml  battery_00037.yaml  battery_00038.yaml  battery_00041.yaml  battery_00043.yaml  battery_00044.yaml  battery_00056.yaml  battery_00065.yaml  battery_00068.yaml  battery_00069.yaml  battery_00070.yaml  battery_00074.yaml  battery_00076.yaml  battery_00080.yaml  battery_00082.yaml  battery_00085.yaml  entry1.archive.yaml  entry10.archive.yaml  entry10.extracted_battery.yaml  entry11.archive.yaml  entry11.extracted_battery.yaml  entry12.archive.yaml  entry13.archive.yaml  entry13.extracted_battery.yaml  entry14.archive.yaml  entry15.archive.yaml  entry15.extracted_battery.yaml  entry16.archive.yaml  entry16.extracted_battery.yaml  entry17.archive.yaml  (+130 more)
tests/normalizers/: test_normalizer.py
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
